# ZFX

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODO.txt  run_with_mangohud.sh
Demo/: CMakeLists.txt  Constants.cpp  Constants.h  Demo.cpp  Demo.h  Demo.hpp  Demo1_Text_Freetype.h  Demo1_Triangles.h  Demo1_Triangles.hpp  Demo2_Square.h  Demo2_Square.hpp  Demo2_Triangles.h  Demo3_Square.h  Demo3_Text_Freetype.h  Demo3_Text_Freetype.hpp  Demo4_Circles.h  Demo5_Cube.h  Demo6A_BasicLighting.h  Demo6B_Materials.h  Demo6C_LightMaps.h  Demo6D_LightCasters.h  Demo6E_FrameBuffers.h  Demo6E_FrameBuffers.h.MSAA  Demo6E_MSAA_FrameBuffers.h  Demo6F_ShadowMapping.h  Demo6G_PointShadows.h  Demo6_BasicLighting.h  Demo7A_ObjectLoader.h  Demo7B_Backpack.h  Demo7_ObjectLoader.h  Demo8_Instancing.h  Demo9_Mouse.h  Demo9_mouse.h  GlApplication.cpp  GlApplication.hpp  MainLoop.cpp  MainLoop.hpp  main.cpp
Demo/Objects/: cube.blend  cube.blend1
Demo/Shaders/: circle.fs  circle.vs  colour.fs  colour.vs  colour2.fs  colour2.vs  colour3D.fs  colour3D.vs  colour3D_LightCasters.fs  colour3D_LightMap.fs  colour3D_LightMap.vs  colour3D_Lighting.fs  colour3D_Lighting.vs  colour3D_Materials.fs  colour3D_Materials.vs  colour3D_NormalMapping.fs  colour3D_NormalMapping.vs  colour3D_PointShadows.fs  colour3D_PointShadows.vs  colour3D_ShadowMapping.fs  colour3D_ShadowMapping.vs  depthCube.fs  depthCube.gs  depthCube.vs  depthshader.vs  framebuffer.fs  framebuffer.vs  freetype.fs  freetype.vs  instancing.fs  instancing.vs  texture.fs  texture.vs  textureAndColour.fs  textureAndColour.vs
Shaders/: basicShaderTexture.fs  basicShaderTexture.vs  basicshader.fs  basicshader.vs  freetype.vs
Source/: ZFX.h
Source/2D/Color/: Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
Source/Common/: Window.cpp  zfxdefs.h
VisualStudio/: ZFX.sln
VisualStudio/ZFX/: ZFX.vcxproj  ZFX.vcxproj.filters
ZFX/: CMakeLists.txt  ZFX.h
ZFX/include/: Camera.h  FrameBuffer.h  Mesh.h  ObjLoader.h  Object.h  Shader.h  TextFreetype.h  Texture.h  Transform.h  Vertex.h  Window.h  colours.h  zfxdefs.h
ZFX/src/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  SSBO.h  Shader.cpp  Shader.h  TextFreetype.cpp  TextFreetype.h  Texture.cpp  Texture.h  Transform.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  colours.h  glDebug.cpp  glDebug.h  zfxPrint.cpp  zfxPrint.h  zfxdefs.cpp  zfxdefs.h
